commit header fatto responsive a tutte le grandezze

--- a/index.html
+++ b/index.html
@@ -10,6 +10,49 @@
   </head>
   <body>
     
+    <!-- sezione fissta -->
+    <section></section>
+    <!-- / sezione fissta -->
+
+    <!-- header -->
+    <header>
+      <div class="container">
+
+        <!-- foto ragazzo -->
+        <div class="row">
+          <div class="guy col-xs-12 text-center">
+            <div class="img "></div>
+          </div>
+        </div>
+        <!--/ foto ragazzo -->
+
+        <!-- titolo header -->
+        <div class="row">
+          <div class="title-header col-xs-10 col-xs-push-1"></div>
+        </div>
+        <!--/ titolo header -->
+
+        <!-- star header -->
+        <div class="row">
+          <div class="star-header col-xs-6 col-xs-push-3"></div>
+        </div> 
+        <!--/ star header -->
+
+        <!-- selezioni dell'header -->
+        <div class="row">
+          <div class="sel-header col-xs-10 col-xs-push-1">
+            <div class="row">
+              <div class="col-xs-6 col-sm-4"></div>
+              <div class="col-xs-6 col-sm-4"></div>
+              <div class="col-xs-6 col-xs-push-3 col-sm-4 col-sm-push-0 "></div>
+            </div>
+          </div>
+        </div>
+        <!--/ selezioni dell'header -->
+          
+      </div>
+    </header>
+    <!-- / header -->
 
    
 
