commit progetto finito con particolari

--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
   </head>
   <body>
     
-    <!-- sezione fissta -->
+    <!-- sezione fissata -->
     <section class="fix-nav">
       <div class="container">
         <div class="row">
-          <div class="col-xs-4">
+          <div class=" col-xs-6 col-sm-4">
             <div class="logo"></div>
           </div>
-          <div class="col-xs-4 col-xs-offset-4">
+          <div class="col-xs-6 col-sm-4 col-sm-offset-4 text-right">
             <div class="nav"></div>
           </div>
         </div>
       </div>
     </section>
-    <!-- / sezione fissta -->
+    <!-- / sezione fissata -->
+
+
 
     <!-- header -->
     <header>
