commit header fatto

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
       <div class="container">
         <div class="row">
           <div class=" col-xs-6 ">
-            <h1>start bootstrap</h1>
+            <h1 class="text-up-whi text-bold">start bootstrap</h1>
           </div>
           <div class="col-xs-6 text-right">
             <div class="nav hidden-xs">
               <ul>
                 <li>
-                  <a href="#">portfolio</a>
+                  <a class="text-up-whi text-bold" href="#">portfolio</a>
                 </li>
                 <li>
-                  <a href="#">about</a>
+                  <a class="text-up-whi text-bold" href="#">about</a>
                 </li>
                 <li>
-                  <a href="#">contact</a>
+                  <a class="text-up-whi text-bold" href="#">contact</a>
                 </li>
               </ul>
             </div>
@@ -44,14 +44,25 @@
 
     <!-- header -->
     <header class="fp-padding-80 debug">
-      <div class="fp-jumbotron">
 
+      <div class="fp-jumbotron text-center">
+        <img src="assets/img/avatar.svg" alt="avatar">
+        <h2 class="text-up-whi text-bold">start bootstrap</h2>
+        <div class="star">
+          <div class="line"></div>
+          <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+          <div class="line"></div>
+        </div>
+        <span class="text-header text-up-whi text-bold">graphic artist -</span>
+        <span class="text-header text-up-whi text-bold"> web designer -</span>
+        <span class="text-header text-up-whi text-bold"> illustrator</span>
       </div>
+
     </header>
     <!-- / header -->
 
     <!-- main -->
-    <main>
+    <main class="fp-padding-80" >
 
       <!-- immagini main -->
       <section class="sec-portfolio">
