commit main finito con particolari aggiunti

--- a/index.html
+++ b/index.html
@@ -40,8 +40,6 @@
     </section>
     <!-- / sezione fissata -->
 
-
-
     <!-- header -->
     <header class="fp-padding-80 back-green">
 
@@ -181,21 +179,21 @@
 
             <form>
 
-              <div class="form-group">
-                <input type="name" class="fp-form-control form-control" id="exampleInputEmail1" placeholder="Name">
+              <div class="fp-form-control form-group">
+                <input type="name" class="fp-form-control-no form-control" id="exampleInputEmail1" placeholder="Name">
               </div>
 
-              <div class="form-group">
-                <input type="email address" class="fp-form-control form-control" id="exampleInputPassword1" placeholder="Email Address">
+              <div class="fp-form-control form-group">
+                <input type="email address" class="fp-form-control-no form-control" id="exampleInputPassword1" placeholder="Email Address">
               </div>
 
-              <div class="form-group">
-                <input type="phone number" class="fp-form-control form-control" id="exampleInputPassword1" placeholder="Phone Number">
+              <div class="fp-form-control form-group">
+                <input type="phone number" class="fp-form-control-no form-control" id="exampleInputPassword1" placeholder="Phone Number">
               </div>
 
-              <textarea class="fp-form-control form-control" placeholder="Message" rows="3"></textarea>
+              <textarea class="fp-form fp-form-bor form-control" placeholder="Message" rows="5"></textarea>
 
-              <button type="send" class="fp-btn-green">Send</button>
+              <button type="send" class="fp-btn-green btn btn-default">Send</button>
 
             </form>
 
