commit progetto finito

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap es</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" crossorigin>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
   </head>
@@ -212,14 +213,22 @@
 
         <div class="container">
           <div class="row">
-            <div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-0">
-              <div class="info-footer"></div>
+            <div class="col-xs-12 col-md-4 text-center">
+              <h3 class="text-up-whi .text-bold">location</h3>
+              <p>2215 John Daniel Drive Clark, MO 54243</p>
             </div>
-            <div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-0">
-              <div class="info-footer"></div>
+            <div class="col-xs-12 col-md-4 text-center">
+              <h3 class="text-up-whi .text-bold">around the web</h3>
+              <ul>
+                <li class=" ma-foot"><a class="book" href="#"><i class="fab fa-facebook-f"></i></a></li>
+                <li class="ma-foot"><a class="gle " href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                <li class="ma-foot"><a class="ter " href="#"><i class="fab fa-twitter"></i></a></li>
+                <li><a class="link" href="#"><i class="fab fa-linkedin-in"></i></a></li>
+              </ul>
             </div>
-            <div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-0">
-              <div class="info-footer"></div>
+            <div class="col-xs-12 col-md-4 text-center ">
+              <h3 class="text-up-whi .text-bold">about freelancer</h3>
+              <p>Freelance is a free to use, open source Bootstrap theme created by <span>Start bootstrap.</span></p>
             </div>
           </div>
         </div>
@@ -230,8 +239,8 @@
 
         <div class="container">
           <div class="row">
-            <div class="col-xs-4 col-xs-offset-4">
-              <div class="copy-footer"></div>
+            <div class="col-xs-12 text-center">
+              <span>Copyright <span class="glyphicon glyphicon-copyright-mark" aria-hidden="true"></span> Your Website 2019</span>
             </div>
           </div>
         </div>
