commit correzioni particolari in live

--- a/index.html
+++ b/index.html
@@ -212,24 +212,36 @@
       <section class="top-footer fp-padding-80">
 
         <div class="container">
+          
           <div class="row">
             <div class="col-xs-12 col-md-4 text-center">
               <h3 class="text-up-whi .text-bold">location</h3>
               <p>2215 John Daniel Drive Clark, MO 54243</p>
             </div>
+
             <div class="col-xs-12 col-md-4 text-center">
               <h3 class="text-up-whi .text-bold">around the web</h3>
               <ul>
-                <li class=" ma-foot"><a class="book" href="#"><i class="fab fa-facebook-f"></i></a></li>
-                <li class="ma-foot"><a class="gle " href="#"><i class="fab fa-google-plus-g"></i></a></li>
-                <li class="ma-foot"><a class="ter " href="#"><i class="fab fa-twitter"></i></a></li>
-                <li><a class="link" href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                <li class=" ma-foot">
+                  <a href="#"><i class="fab fa-facebook-f"></i></a>
+                </li>
+                <li class="ma-foot">
+                  <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                </li>
+                <li class="ma-foot">
+                  <a href="#"><i class="fab fa-twitter"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                </li>
               </ul>
             </div>
+
             <div class="col-xs-12 col-md-4 text-center ">
               <h3 class="text-up-whi .text-bold">about freelancer</h3>
               <p>Freelance is a free to use, open source Bootstrap theme created by <span>Start bootstrap.</span></p>
             </div>
+
           </div>
         </div>
 
